Update build script

--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "dev:eleventy": "eleventy --config=eleventy.config.js --serve",
     "dev:css": "npx tailwindcss -i ./src/main.css -o ./dist/main.min.css --watch",
     "dev": "concurrently npm:dev:*",
-    "build:eleventy": "eleventy --config=eleventy.config.js",
-    "build:css": "npx tailwindcss -i ./src/main.css -o ./dist/main.min.css",
-    "build": "NODE_ENV=production concurrently npm:build:*"
+    "build:eleventy": "ELEVENTY_ENV=production eleventy --config=eleventy.config.js --serve",
+    "build:css": "NODE_ENV=production npx tailwindcss -i ./src/main.css -o ./dist/main.min.css  --minify",
+    "build": "concurrently npm:build:*"
   },
   "license": "MIT",
   "devDependencies": {
