--- a/package.json
+++ b/package.json
@@ -1,30 +1,29 @@
 {
-  "name": "scratch",
-  "version": "2.0.0",
-  "description": "My Starter Kit",
+  "name": "nav-prototype",
+  "version": "0.1.0",
+  "description": "",
   "author": "Martin Berglund <marberglund@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/macbruker/scratch"
+    "url": "https://github.com/macbruker/nav-prototype"
   },
   "scripts": {
     "dev:eleventy": "eleventy --config=eleventy.config.js --serve",
-    "dev:css": "npx tailwindcss -i ./src/main.css -o ./dist/main.min.css --watch",
+    "dev:css": "npx tailwindcss -i ./src/main.css -o ./dist/main.min.css --minify --watch",
     "dev": "concurrently npm:dev:*",
     "build:eleventy": "ELEVENTY_ENV=production eleventy --config=eleventy.config.js --serve",
-    "build:css": "NODE_ENV=production npx tailwindcss -i ./src/main.css -o ./dist/main.min.css  --minify",
+    "build:css": "NODE_ENV=production npx tailwindcss -i ./src/main.css -o ./dist/main.min.css --minify",
     "build": "concurrently npm:build:*"
   },
   "license": "MIT",
   "devDependencies": {
-    "@11ty/eleventy": "^0.12.1",
-    "alpinejs": "^3.7.0",
-    "autoprefixer": "^10.4.0",
+    "@11ty/eleventy": "^2.0.0-canary.11",
+    "alpinejs": "^3.10.2",
     "compression": "^1.7.4",
     "concurrently": "^6.4.0",
-    "cssnano": "^5.0.12",
     "eleventy-plugin-svg-contents": "^0.7.0",
-    "postcss": "^8.4.4",
-    "tailwindcss": "^3.0.1"
+    "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.11",
+    "tailwindcss": "^3.0.24"
   }
 }
