--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
     "dev:eleventy": "eleventy --config=eleventy.config.js --serve",
     "dev:css": "npx tailwindcss -i ./src/main.css -o ./dist/main.min.css --minify --watch",
     "dev": "concurrently npm:dev:*",
-    "build:eleventy": "ELEVENTY_ENV=production eleventy --config=eleventy.config.js --serve",
+    "build:eleventy": "ELEVENTY_ENV=production eleventy --config=eleventy.config.js",
     "build:css": "NODE_ENV=production npx tailwindcss -i ./src/main.css -o ./dist/main.min.css --minify",
     "build": "concurrently npm:build:*"
   },
   "license": "MIT",
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.0-canary.14",
+    "@11ty/eleventy": "^2.0.0-canary.16",
     "alpinejs": "^3.10.3",
     "compression": "^1.7.4",
-    "concurrently": "^7.3.0",
+    "concurrently": "^7.4.0",
     "eleventy-plugin-svg-contents": "^0.7.0",
-    "prettier": "^2.6.2",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "tailwindcss": "^3.1.7"
+    "html-minifier": "^4.0.0",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.8"
   }
 }
