--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/macbruker/nav-prototype"
   },
   "scripts": {
-    "dev:eleventy": "eleventy --config=eleventy.config.js --serve",
+    "dev:eleventy": "ELEVENTY_ENV=development eleventy --config=eleventy.config.js --serve",
     "dev:css": "npx tailwindcss -i ./src/main.css -o ./dist/main.min.css --minify --watch",
     "dev": "concurrently npm:dev:*",
     "build:eleventy": "ELEVENTY_ENV=production eleventy --config=eleventy.config.js",
@@ -18,12 +18,12 @@
   "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "^2.0.0-canary.16",
-    "alpinejs": "^3.10.3",
+    "alpinejs": "^3.10.5",
     "compression": "^1.7.4",
-    "concurrently": "^7.4.0",
+    "concurrently": "^7.6.0",
     "eleventy-plugin-svg-contents": "^0.7.0",
     "html-minifier": "^4.0.0",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.0",
     "tailwindcss": "^3.2.4"
   }
 }
