--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
   },
   "scripts": {
     "dev:eleventy": "ELEVENTY_ENV=development eleventy --config=eleventy.config.js --serve",
-    "dev:css": "npx tailwindcss -i ./src/main.css -o ./dist/main.min.css --minify --watch",
+    "dev:css": "npx tailwindcss -i ./src/assets/main.css -o ./_site/assets/main.min.css --minify --watch",
     "dev": "concurrently npm:dev:*",
     "build:eleventy": "ELEVENTY_ENV=production eleventy --config=eleventy.config.js",
-    "build:css": "NODE_ENV=production npx tailwindcss -i ./src/main.css -o ./dist/main.min.css --minify",
+    "build:css": "NODE_ENV=production npx tailwindcss -i ./src/assets/main.css -o ./_site/assets/main.min.css --minify",
     "build": "concurrently npm:build:*"
   },
   "license": "MIT",
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.0-canary.16",
+    "@11ty/eleventy": "^2.0.0-canary.23",
     "alpinejs": "^3.10.5",
     "compression": "^1.7.4",
     "concurrently": "^7.6.0",
     "eleventy-plugin-svg-contents": "^0.7.0",
     "html-minifier": "^4.0.0",
-    "prettier": "^2.8.0",
+    "prettier": "^2.8.1",
     "tailwindcss": "^3.2.4"
   }
 }
