--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev:eleventy": "ELEVENTY_ENV=development eleventy --config=eleventy.config.js --serve",
     "dev:css": "postcss ./src/assets/main.css -o ./build/assets/main.min.css --watch",
     "dev": "concurrently npm:dev:*",
-    "build:eleventy": "ELEVENTY_ENV=production eleventy --config=eleventy.config.js",
+    "build:eleventy": "ELEVENTY_ENV=production SITE_PATH=/person/prototype eleventy --config=eleventy.config.js",
     "build:css": "NODE_ENV=production postcss ./src/assets/main.css -o ./build/assets/main.min.css",
     "build": "concurrently npm:build:*",
     "start": "node ./server/app.js"
@@ -32,6 +32,7 @@
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "path": "^0.12.7"
   }
