Justering av filtere og legge til script for uxtweak

--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "dev:css": "postcss ./src/assets/main.css -o ./build/assets/main.min.css --watch",
     "dev": "concurrently npm:dev:*",
     "build:eleventy": "ELEVENTY_ENV=production eleventy --config=eleventy.config.js --pathprefix=person/prototype",
+    "build:eleventy-local": "ELEVENTY_ENV=production eleventy --config=eleventy.config.js",
     "build:css": "NODE_ENV=production postcss ./src/assets/main.css -o ./build/assets/main.min.css",
     "build": "concurrently npm:build:*",
+    "build-local": "concurrently \"npm:build:css\" \"npm:build:eleventy-local\"",
     "start": "node ./server/app.js"
   },
   "license": "MIT",
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.0-canary.25",
+    "@11ty/eleventy": "^2.0.0-canary.29",
     "alpinejs": "^3.10.5",
     "autoprefixer": "^10.4.13",
     "compression": "^1.7.4",
@@ -26,9 +28,9 @@
     "cssnano": "^5.1.14",
     "eleventy-plugin-svg-contents": "^0.7.0",
     "html-minifier": "^4.0.0",
-    "postcss": "^8.4.20",
+    "postcss": "^8.4.21",
     "postcss-cli": "^10.1.0",
-    "prettier": "^2.8.1",
+    "prettier": "^2.8.2",
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
