--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.0-canary.30",
+    "@11ty/eleventy": "^2.0.0-beta.1",
     "alpinejs": "^3.10.5",
     "autoprefixer": "^10.4.13",
     "compression": "^1.7.4",
