--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "postcss": "^8.4.21",
     "postcss-cli": "^10.1.0",
     "prettier": "^2.8.3",
+    "prettier-plugin-multiline-arrays": "^1.1.3",
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
