--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.0-beta.1",
+    "@11ty/eleventy": "^2.0.0",
     "@alpinejs/focus": "^3.11.1",
     "alpinejs": "^3.11.1",
     "autoprefixer": "^10.4.13",
@@ -29,9 +29,9 @@
     "html-minifier": "^4.0.0",
     "postcss": "^8.4.21",
     "postcss-cli": "^10.1.0",
-    "prettier": "^2.8.3",
+    "prettier": "^2.8.4",
     "prettier-plugin-multiline-arrays": "^1.1.3",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.6"
   },
   "dependencies": {
     "compression": "^1.7.4",
