--- a/package.json
+++ b/package.json
@@ -9,32 +9,34 @@
   },
   "scripts": {
     "eleventy-debug": "DEBUG=Eleventy* npx @11ty/eleventy",
-    "dev:eleventy": "ELEVENTY_ENV=development eleventy --config=eleventy.config.js --serve",
+    "dev:eleventy": "eleventy --config=eleventy.config.js --serve",
     "dev:css": "postcss ./src/assets/main.css -o ./build/assets/main.min.css --watch",
-    "dev": "concurrently npm:dev:*",
+    "dev": "ELEVENTY_ENV=development concurrently npm:dev:*",
+    "dev-perf": "ELEVENTY_ENV=perf concurrently npm:dev:*",
     "build:eleventy": "ELEVENTY_ENV=production eleventy --config=eleventy.config.js",
     "build:css": "NODE_ENV=production postcss ./src/assets/main.css -o ./build/assets/main.min.css",
     "build": "concurrently npm:build:*",
+    "serve": "ELEVENTY_ENV=production eleventy --config=eleventy.config.js --serve",
     "start": "node ./server/app.js"
   },
   "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
-    "alpinejs": "^3.12.1",
-    "autoprefixer": "^10.4.14",
-    "concurrently": "^8.0.1",
-    "cssnano": "^6.0.1",
+    "alpinejs": "^3.13.3",
+    "autoprefixer": "^10.4.16",
+    "concurrently": "^8.2.2",
+    "cssnano": "^6.0.3",
     "eleventy-plugin-svg-contents": "^0.7.0",
     "html-minifier": "^4.0.0",
-    "postcss": "^8.4.23",
-    "postcss-cli": "^10.1.0",
-    "prettier": "^2.8.8",
-    "prettier-plugin-multiline-arrays": "^1.1.3",
-    "tailwindcss": "^3.3.2"
+    "postcss": "^8.4.33",
+    "postcss-cli": "^11.0.0",
+    "prettier": "^3.1.1",
+    "prettier-plugin-multiline-arrays": "^3.0.1",
+    "tailwindcss": "^3.4.1"
   },
   "dependencies": {
     "compression": "^1.7.4",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "path": "^0.12.7"
   }
