--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build:eleventy": "ELEVENTY_ENV=production eleventy --config=eleventy.config.js",
     "build:css": "NODE_ENV=production postcss ./src/assets/main.css -o ./build/assets/main.min.css",
     "build": "concurrently npm:build:*",
-    "serve": "ELEVENTY_ENV=production eleventy --config=eleventy.config.js --serve",
+    "serve": "NODE_ENV=production ELEVENTY_ENV=production eleventy --config=eleventy.config.js --serve",
     "start": "node ./server/app.js"
   },
   "license": "MIT",
@@ -26,8 +26,12 @@
     "autoprefixer": "^10.4.16",
     "concurrently": "^8.2.2",
     "cssnano": "^6.0.3",
+    "dotenv": "^16.3.1",
     "eleventy-plugin-svg-contents": "^0.7.0",
+    "eleventy-plugin-toc": "^1.1.5",
     "html-minifier": "^4.0.0",
+    "markdown-it-anchor": "^8.6.7",
+    "markdown-it-toc-done-right": "^4.2.0",
     "postcss": "^8.4.33",
     "postcss-cli": "^11.0.0",
     "prettier": "^3.1.1",
@@ -36,7 +40,6 @@
   },
   "dependencies": {
     "compression": "^1.7.4",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "path": "^0.12.7"
   }
