--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
+    "@alpinejs/intersect": "^3.13.3",
     "alpinejs": "^3.13.3",
     "autoprefixer": "^10.4.16",
     "concurrently": "^8.2.2",
