--- a/package.json
+++ b/package.json
@@ -21,27 +21,27 @@
   "license": "MIT",
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
-    "@alpinejs/intersect": "^3.13.7",
-    "alpinejs": "^3.13.7",
-    "autoprefixer": "^10.4.18",
+    "@alpinejs/intersect": "^3.13.9",
+    "alpinejs": "^3.13.9",
+    "autoprefixer": "^10.4.19",
     "cheerio": "^1.0.0-rc.12",
     "concurrently": "^8.2.2",
-    "cssnano": "^6.1.0",
+    "cssnano": "^6.1.2",
     "dotenv": "^16.4.5",
     "eleventy-plugin-svg-contents": "^0.7.0",
     "eleventy-plugin-toc": "^1.1.5",
-    "html-minifier": "^4.0.0",
     "markdown-it-anchor": "^8.6.7",
+    "markdown-it-mark": "^4.0.0",
     "markdown-it-toc-done-right": "^4.2.0",
-    "postcss": "^8.4.36",
+    "postcss": "^8.4.38",
     "postcss-cli": "^11.0.0",
     "prettier": "^3.2.5",
     "prettier-plugin-multiline-arrays": "^3.0.4",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.3"
   },
   "dependencies": {
     "compression": "^1.7.4",
-    "express": "^4.18.3",
+    "express": "^4.19.2",
     "path": "^0.12.7"
   }
 }
