--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.4.5",
     "eleventy-plugin-svg-contents": "^0.7.0",
     "eleventy-plugin-toc": "^1.1.5",
+    "html-minifier-terser": "^7.2.0",
     "markdown-it-anchor": "^8.6.7",
     "markdown-it-mark": "^4.0.0",
     "markdown-it-toc-done-right": "^4.2.0",
