Oppdatere JS-pakker

--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "@11ty/eleventy": "^2.0.1",
     "@alpinejs/intersect": "^3.14.1",
     "alpinejs": "^3.14.1",
-    "autoprefixer": "^10.4.19",
-    "cheerio": "^1.0.0-rc.12",
+    "autoprefixer": "^10.4.20",
+    "cheerio": "^1.0.0",
     "concurrently": "^8.2.2",
-    "cssnano": "^7.0.4",
+    "cssnano": "^7.0.5",
     "dotenv": "^16.4.5",
     "eleventy-plugin-svg-contents": "^0.7.0",
     "eleventy-plugin-toc": "^1.1.5",
@@ -34,11 +34,11 @@
     "markdown-it-anchor": "^9.0.1",
     "markdown-it-mark": "^4.0.0",
     "markdown-it-toc-done-right": "^4.2.0",
-    "postcss": "^8.4.39",
+    "postcss": "^8.4.40",
     "postcss-cli": "^11.0.0",
     "prettier": "^3.3.3",
     "prettier-plugin-multiline-arrays": "^3.0.6",
-    "tailwindcss": "^3.4.6"
+    "tailwindcss": "^3.4.10"
   },
   "dependencies": {
     "compression": "^1.7.4",
