--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "type": "git",
     "url": "https://github.com/macbruker/navno-prototype"
   },
+  "type": "module",
   "scripts": {
     "eleventy-debug": "DEBUG=Eleventy* npx @11ty/eleventy",
     "dev:eleventy": "eleventy --config=eleventy.config.js --serve",
@@ -20,29 +21,29 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.1",
-    "@alpinejs/intersect": "^3.14.1",
-    "alpinejs": "^3.14.1",
+    "@11ty/eleventy": "^3.0.0",
+    "@alpinejs/intersect": "^3.14.7",
+    "alpinejs": "^3.14.7",
     "autoprefixer": "^10.4.20",
     "cheerio": "^1.0.0",
-    "concurrently": "^9.0.1",
+    "concurrently": "^9.1.0",
     "cssnano": "^7.0.6",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "eleventy-plugin-svg-contents": "^0.7.0",
     "eleventy-plugin-toc": "^1.1.5",
     "html-minifier-terser": "^7.2.0",
     "markdown-it-anchor": "^9.2.0",
     "markdown-it-mark": "^4.0.0",
     "markdown-it-toc-done-right": "^4.2.0",
-    "postcss": "^8.4.40",
+    "postcss": "^8.4.49",
     "postcss-cli": "^11.0.0",
-    "prettier": "^3.3.3",
-    "prettier-plugin-multiline-arrays": "^3.0.6",
-    "tailwindcss": "^3.4.13"
+    "prettier": "^3.4.2",
+    "prettier-plugin-multiline-arrays": "^4.0.1",
+    "tailwindcss": "^3.4.16"
   },
   "dependencies": {
-    "compression": "^1.7.4",
-    "express": "^4.21.0",
+    "compression": "^1.7.5",
+    "express": "^4.21.2",
     "path": "^0.12.7"
   }
 }
