--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^3.1.0",
     "@alpinejs/intersect": "^3.14.9",
+    "@tailwindcss/cli": "^4.1.7",
     "alpinejs": "^3.14.9",
     "autoprefixer": "^10.4.21",
     "cheerio": "^1.0.0",
@@ -36,8 +37,7 @@
     "markdown-it-toc-done-right": "^4.2.0",
     "prettier": "^3.5.3",
     "prettier-plugin-multiline-arrays": "^4.0.3",
-    "tailwindcss": "^4.1.7",
-    "@tailwindcss/cli": "^4.1.7"
+    "tailwindcss": "^4.1.7"
   },
   "dependencies": {
     "compression": "^1.8.0",
